--- a/kubernetes/message-api.yaml
+++ b/kubernetes/message-api.yaml
@@ -16,8 +16,7 @@ spec:
     spec:
       containers:
       - name: pixelchat-message-api
-        image: pixelchat-message-api
-        imagePullPolicy: Never
+        image: ghcr.io/teunmos-pixelchat/message-api:develop
         resources:
           limits:
             cpu: 500m
@@ -31,6 +30,8 @@ spec:
         #   value: http://pixelchat-message_api:3001
         - name: PORT
           value: "3001"
+      imagePullSecrets:
+      - name: dockerconfigjson-github-com
 ---
 apiVersion: v1
 kind: Service
