--- a/kubernetes/gateway.yaml
+++ b/kubernetes/gateway.yaml
@@ -19,8 +19,8 @@ spec:
         image: ghcr.io/teunmos-pixelchat/gateway:develop
         resources:
           limits:
-            cpu: 500m
-            memory: 512Mi
+            cpu: 250m
+            memory: 256Mi
         ports:
         - containerPort: 80
         env:
@@ -33,16 +33,27 @@ spec:
       imagePullSecrets:
       - name: dockerconfigjson-github-com
 ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: pixelchat-gateway
+# spec:
+#   type: NodePort
+#   ports:
+#   - port: 80
+#     targetPort: 80
+#     nodePort: 30000
+#   selector:
+#     app: pixelchat-gateway
+# ---
 apiVersion: v1
 kind: Service
 metadata:
   name: pixelchat-gateway
 spec:
-  type: NodePort
   ports:
   - port: 80
     targetPort: 80
-    nodePort: 30000
   selector:
     app: pixelchat-gateway
-    
+  type: LoadBalancer
