Update subproject commit and image versions to old ones (because auth0 is not working in aks)

--- a/kubernetes/gateway.yaml
+++ b/kubernetes/gateway.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: pixelchat-gateway
-        image: ghcr.io/teunmos-pixelchat/gateway:develop
+        image: ghcr.io/teunmos-pixelchat/gateway:develop-1711627894
         imagePullPolicy: Always
         resources:
           limits:
