--- a/kubernetes/autoscaling.yaml
+++ b/kubernetes/autoscaling.yaml
@@ -8,8 +8,8 @@ spec:
    kind: Deployment
    name: pixelchat-frontend
  minReplicas: 1
- maxReplicas: 3
- targetCPUUtilizationPercentage: 75
+ maxReplicas: 4
+ targetCPUUtilizationPercentage: 50
 ---
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
@@ -25,15 +25,15 @@ spec:
  targetCPUUtilizationPercentage: 75
 
 ---
-# apiVersion: autoscaling/v1
-# kind: HorizontalPodAutoscaler
-# metadata:
-#  name: pixelchat-postgres
-# spec:
-#  scaleTargetRef:
-#    apiVersion: apps/v1
-#    kind: Deployment
-#    name: pixelchat-postgres
-#  minReplicas: 1
-#  maxReplicas: 5
-#  targetCPUUtilizationPercentage: 50
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
+metadata:
+ name: pixelchat-postgres
+spec:
+ scaleTargetRef:
+   apiVersion: apps/v1
+   kind: Deployment
+   name: pixelchat-postgres
+ minReplicas: 1
+ maxReplicas: 5
+ targetCPUUtilizationPercentage: 50
