--- a/kubernetes/autoscaling.yaml
+++ b/kubernetes/autoscaling.yaml
@@ -32,8 +32,21 @@ metadata:
 spec:
  scaleTargetRef:
    apiVersion: apps/v1
-   kind: Deployment
+   kind: StatefulSet
    name: pixelchat-postgres
  minReplicas: 1
  maxReplicas: 5
  targetCPUUtilizationPercentage: 50
+---
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
+metadata:
+ name: pixelchat-cassandra
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: StatefulSet
+    name: pixelchat-cassandra
+  minReplicas: 1
+  maxReplicas: 5
+  targetCPUUtilizationPercentage: 50
