--- a/kubernetes/autoscaling.yaml
+++ b/kubernetes/autoscaling.yaml
@@ -24,29 +24,29 @@ spec:
  maxReplicas: 3
  targetCPUUtilizationPercentage: 75
 
----
-apiVersion: autoscaling/v1
-kind: HorizontalPodAutoscaler
-metadata:
- name: pixelchat-postgres
-spec:
- scaleTargetRef:
-   apiVersion: apps/v1
-   kind: StatefulSet
-   name: pixelchat-postgres
- minReplicas: 1
- maxReplicas: 5
- targetCPUUtilizationPercentage: 50
----
-apiVersion: autoscaling/v1
-kind: HorizontalPodAutoscaler
-metadata:
- name: pixelchat-cassandra
-spec:
-  scaleTargetRef:
-    apiVersion: apps/v1
-    kind: StatefulSet
-    name: pixelchat-cassandra
-  minReplicas: 1
-  maxReplicas: 5
-  targetCPUUtilizationPercentage: 50
+# ---
+# apiVersion: autoscaling/v1
+# kind: HorizontalPodAutoscaler
+# metadata:
+#  name: pixelchat-postgres
+# spec:
+#  scaleTargetRef:
+#    apiVersion: apps/v1
+#    kind: StatefulSet
+#    name: pixelchat-postgres
+#  minReplicas: 3
+#  maxReplicas: 5
+#  targetCPUUtilizationPercentage: 50
+# ---
+# apiVersion: autoscaling/v1
+# kind: HorizontalPodAutoscaler
+# metadata:
+#  name: pixelchat-cassandra
+# spec:
+#   scaleTargetRef:
+#     apiVersion: apps/v1
+#     kind: StatefulSet
+#     name: pixelchat-cassandra
+#   minReplicas: 1
+#   maxReplicas: 5
+#   targetCPUUtilizationPercentage: 50
