--- a/kubernetes/postgresDB.yaml
+++ b/kubernetes/postgresDB.yaml
@@ -1,120 +1,55 @@
-# This is every deployment and service needed for the postgres database
-
-# https://www.bmc.com/blogs/kubernetes-postgresql/
-
-
-# Config Map for the postgres database
+# https://stackgres.io/
 apiVersion: v1
-kind: ConfigMap
+kind: Secret
 metadata:
-  name: postgres-secret
-  labels:
-    app: pixelchat-postgres
+  name: postgres-credentials
+type: Opaque
 data:
-  POSTGRES_DB: pixelchat
-  POSTGRES_USER: postgres
-  POSTGRES_PASSWORD: epicPassword
-
----
-# A StatefulSet is a controller that is used to manage stateful applications
-apiVersion: apps/v1
-kind: StatefulSet
-metadata:
-  name: pixelchat-postgres
-spec:
-  serviceName: pixelchat-postgres
-  replicas: 1
-  selector:
-    matchLabels:
-      app: pixelchat-postgres
-  template:
-    metadata:
-      labels:
-        app: pixelchat-postgres
-    spec:
-      containers:
-        - name: postgres
-          image: postgres:13
-          envFrom:
-            - configMapRef:
-                name: postgres-secret
-          env:
-            - name: PGDATA
-              value: /var/lib/postgresql/data/pgdata
-          ports:
-            - containerPort: 5432
-              name: postgres
-          volumeMounts:
-            - name: postgresdata
-              mountPath: /var/lib/postgresql/data
-          resources:
-            limits:
-              cpu: 1000m
-              memory: 512Mi
-  volumeClaimTemplates:
-    - metadata:
-        name: postgresdata
-      spec:
-        accessModes:
-          - ReadWriteOnce
-        resources:
-          requests:
-            storage: 15Gi
-  # volumes:
-  #   - name: postgresdata
-  #     persistentVolumeClaim:
-  #       claimName: postgres-volume-claim
-
-
-# ---
-# apiVersion: apps/v1
-# kind: Deployment
-# metadata:
-#   name: pixelchat-postgres
-# spec:
-#   replicas: 1
-#   selector:
-#     matchLabels:
-#       app: pixelchat-postgres
-#   template:
-#     metadata:
-#       labels:
-#         app: pixelchat-postgres
-#     spec:
-#       containers:
-#         - name: pixelchat-postgres
-#           image: 'postgres:14'
-#           imagePullPolicy: IfNotPresent
-#           ports:
-#             - containerPort: 5432
-#           envFrom:
-#             - configMapRef:
-#                 name: postgres-secret
-#           volumeMounts:
-#             - mountPath: /var/lib/postgresql/data
-#               name: postgresdata
-#           resources:
-#             limits:
-#               cpu: 1000m
-#               memory: 512Mi
-        
-#       volumes:
-#         - name: postgresdata
-#           persistentVolumeClaim:
-#             claimName: postgres-volume-claim
-
+  username: cG9zdGdyZXM=  # Base64 encoded 'postgres'
+  password: ZXBpY1Bhc3N3b3Jk  # Base64 encoded 'mypassword'
 ---
 
-apiVersion: v1
-kind: Service
+apiVersion: stackgres.io/v1
+kind: SGCluster
 metadata:
-  name: pixelchat-postgres
-  labels:
-    app: pixelchat-postgres
+  name: pixelchat-postgres-stackgres-cluster
 spec:
-  type: NodePort
-  ports:
-    - port: 5432
-  selector:
-    app: pixelchat-postgres
-
+  configurations:
+    credentials:
+      users:
+        superuser:
+          username:
+            name: postgres-credentials
+            key: username
+          password:
+            name: postgres-credentials
+            key: password
+  instances: 2
+  postgres:
+    version: 'latest'
+  pods:
+    persistentVolume:
+      size: '5Gi'
+  autoscaling:
+    minInstances: 2
+    maxInstances: 5
+    maxAllowed:
+      envoy:
+        cpu: 400m
+        memory: 1Gi
+      patroni:
+        cpu: 400m
+        memory: 1Gi
+      pgbouncer:
+        cpu: 400m 
+        memory: 1Gi
+    minAllowed:
+      envoy:
+        cpu: 100m
+        memory: 100Mi
+      patroni:
+        cpu: 100m
+        memory: 100Mi
+      pgbouncer:
+        cpu: 100m
+        memory: 100Mi
