--- a/kubernetes/postgresDB.yaml
+++ b/kubernetes/postgresDB.yaml
@@ -6,7 +6,7 @@ metadata:
 type: Opaque
 data:
   username: cG9zdGdyZXM=  # Base64 encoded 'postgres'
-  password: ZXBpY1Bhc3N3b3Jk  # Base64 encoded 'mypassword'
+  password: ZXBpY1Bhc3N3b3Jk
 ---
 
 apiVersion: stackgres.io/v1
