--- a/kubernetes/user-service.yaml
+++ b/kubernetes/user-service.yaml
@@ -23,12 +23,10 @@ spec:
             cpu: 350m
             memory: 512Mi
         ports:
-        - containerPort: 3001
-        # env:
-        # - name: FRONTEND_URL
-        #   value: http://pixelchat-frontend:3000
-        # - name: MESSAGE_API_URL
-        #   value: http://pixelchat-message_api:3001
+        - containerPort: 3002
+        env:
+        - name: POSTGRES_CONN_STRING
+          value: postgres://postgres:epicPassword@pixelchat-postgres-stackgres-cluster:5432/postgres # TODO: Change this to a secret
       imagePullSecrets:
       - name: dockerconfigjson-github-com
 ---
