Update subproject commit hash for documentation and scaling config

--- a/kubernetes/autoscaling.yaml
+++ b/kubernetes/autoscaling.yaml
@@ -23,6 +23,19 @@ spec:
  minReplicas: 1
  maxReplicas: 3
  targetCPUUtilizationPercentage: 75
+---
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
+metadata:
+ name: pixelchat-cassandra
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: StatefulSet
+    name: pixelchat-cassandra
+  minReplicas: 3
+  maxReplicas: 6
+  targetCPUUtilizationPercentage: 65
 
 # ---
 # apiVersion: autoscaling/v1
@@ -37,16 +50,3 @@ spec:
 #  minReplicas: 3
 #  maxReplicas: 5
 #  targetCPUUtilizationPercentage: 50
-# ---
-# apiVersion: autoscaling/v1
-# kind: HorizontalPodAutoscaler
-# metadata:
-#  name: pixelchat-cassandra
-# spec:
-#   scaleTargetRef:
-#     apiVersion: apps/v1
-#     kind: StatefulSet
-#     name: pixelchat-cassandra
-#   minReplicas: 1
-#   maxReplicas: 5
-#   targetCPUUtilizationPercentage: 50
