--- a/kubernetes/message-api.yaml
+++ b/kubernetes/message-api.yaml
@@ -24,9 +24,9 @@ spec:
             memory: 512Mi
         ports:
         - containerPort: 3001
-        # env:
-        # - name: FRONTEND_URL
-        #   value: http://pixelchat-frontend:3000
+        env:
+        - name: CASSANDRA_CONTACT_POINTS
+          value: pixelchat-cassandra-0.pixelchat-cassandra.default.svc.cluster.local,pixelchat-cassandra-1.pixelchat-cassandra.default.svc.cluster.local,pixelchat-cassandra-2.pixelchat-cassandra.default.svc.cluster.local
         # - name: MESSAGE_API_URL
         #   value: http://pixelchat-message_api:3001
       imagePullSecrets:
