--- a/kubernetes/secrets.yaml
+++ b/kubernetes/secrets.yaml
@@ -6,7 +6,14 @@ type: Opaque
 data:
   username: cG9zdGdyZXM=  # Base64 encoded 'postgres'
   password: ZXBpY1Bhc3N3b3Jk
-# ---
-
-# Path: kubernetes/user-service.yaml
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: pixelchat-user-service-secret
+data:
+  POSTGRES_CONN_STRING: cG9zdGdyZXM6Ly9wb3N0Z3JlczplcGljUGFzc3dvcmRAcGl4ZWxjaGF0LXBvc3RncmVzLXN0YWNrZ3Jlcy1jbHVzdGVyOjU0MzIvcG9zdGdyZXM=
+  AUTH0_CLIENT_ID: __
+  AUTH0_CLIENT_SECRET: __
+  AUTH0_DOMAIN: __
 
