--- a/kubernetes/user-service.yaml
+++ b/kubernetes/user-service.yaml
@@ -26,7 +26,25 @@ spec:
         - containerPort: 3002
         env:
         - name: POSTGRES_CONN_STRING
-          value: postgres://postgres:epicPassword@pixelchat-postgres-stackgres-cluster:5432/postgres # TODO: Change this to a secret
+          valueFrom:
+            secretKeyRef:
+              name: pixelchat-user-service-secret
+              key: POSTGRES_CONN_STRING
+        - name: AUTH0_CLIENT_ID
+          valueFrom:
+            secretKeyRef:
+              name: pixelchat-user-service-secret
+              key: AUTH0_CLIENT_ID
+        - name: AUTH0_CLIENT_SECRET
+          valueFrom:
+            secretKeyRef:
+              name: pixelchat-user-service-secret
+              key: AUTH0_CLIENT_SECRET
+        - name: AUTH0_DOMAIN
+          valueFrom:
+            secretKeyRef:
+              name: pixelchat-user-service-secret
+              key: AUTH0_DOMAIN
       imagePullSecrets:
       - name: dockerconfigjson-github-com
 ---
