--- a/kubernetes/secrets.yaml
+++ b/kubernetes/secrets.yaml
@@ -12,7 +12,7 @@ kind: Secret
 metadata:
   name: pixelchat-user-service-secret
 data:
-  POSTGRES_CONN_STRING: cG9zdGdyZXM6Ly9wb3N0Z3JlczplcGljUGFzc3dvcmRAcGl4ZWxjaGF0LXBvc3RncmVzLXN0YWNrZ3Jlcy1jbHVzdGVyOjU0MzIvcG9zdGdyZXM=
+  POSTGRES_CONN_STRING: __
   AUTH0_CLIENT_ID: __
   AUTH0_CLIENT_SECRET: __
   AUTH0_DOMAIN: __
