--- a/kubernetes/secrets.yaml
+++ b/kubernetes/secrets.yaml
@@ -10,10 +10,16 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: pixelchat-user-service-secret
+  name: pixelchat-auth0-secret
 data:
-  POSTGRES_CONN_STRING: __
   AUTH0_CLIENT_ID: __
   AUTH0_CLIENT_SECRET: __
   AUTH0_DOMAIN: __
-
+  
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: pixelchat-user-service-secret
+data:
+  POSTGRES_CONN_STRING: __
