--- a/kubernetes/user-service.yaml
+++ b/kubernetes/user-service.yaml
@@ -33,17 +33,17 @@ spec:
         - name: AUTH0_CLIENT_ID
           valueFrom:
             secretKeyRef:
-              name: pixelchat-user-service-secret
+              name: pixelchat-auth0-secret
               key: AUTH0_CLIENT_ID
         - name: AUTH0_CLIENT_SECRET
           valueFrom:
             secretKeyRef:
-              name: pixelchat-user-service-secret
+              name: pixelchat-auth0-secret
               key: AUTH0_CLIENT_SECRET
         - name: AUTH0_DOMAIN
           valueFrom:
             secretKeyRef:
-              name: pixelchat-user-service-secret
+              name: pixelchat-auth0-secret
               key: AUTH0_DOMAIN
       imagePullSecrets:
       - name: dockerconfigjson-github-com
