--- a/kubernetes/gateway.yaml
+++ b/kubernetes/gateway.yaml
@@ -19,6 +19,9 @@ spec:
         image: ghcr.io/teunmos-pixelchat/gateway:develop
         imagePullPolicy: Always
         resources:
+          requests:
+            cpu: 300m
+            memory: 256Mi
           limits:
             cpu: 500m
             memory: 512Mi
