--- a/kubernetes/message-api.yaml
+++ b/kubernetes/message-api.yaml
@@ -19,16 +19,23 @@ spec:
         image: ghcr.io/teunmos-pixelchat/message-api:develop
         imagePullPolicy: Always
         resources:
+          requests:
+            cpu: 200m
+            memory: 256Mi
           limits:
-            cpu: 350m
+            cpu: 500m
             memory: 512Mi
         ports:
         - containerPort: 3001
         env:
         - name: CASSANDRA_CONTACT_POINTS
           value: pixelchat-cassandra-0.pixelchat-cassandra.default.svc.cluster.local,pixelchat-cassandra-1.pixelchat-cassandra.default.svc.cluster.local,pixelchat-cassandra-2.pixelchat-cassandra.default.svc.cluster.local
-        # - name: MESSAGE_API_URL
-        #   value: http://pixelchat-message_api:3001
+        - name: RABBITMQ_HOST
+          value: pixelchat-rabbitmq
+        - name: RABBITMQ_USER
+          value: guest
+        - name: RABBITMQ_PASS
+          value: guest
       imagePullSecrets:
       - name: dockerconfigjson-github-com
 ---
