Update todo and scaling config

--- a/kubernetes/autoscaling.yaml
+++ b/kubernetes/autoscaling.yaml
@@ -23,17 +23,29 @@ spec:
  minReplicas: 1
  maxReplicas: 3
  targetCPUUtilizationPercentage: 75
-
-# ---
-# apiVersion: autoscaling/v1
-# kind: HorizontalPodAutoscaler
-# metadata:
-#  name: pixelchat-postgres
-# spec:
-#  scaleTargetRef:
-#    apiVersion: apps/v1
-#    kind: StatefulSet
-#    name: pixelchat-postgres
-#  minReplicas: 3
-#  maxReplicas: 5
-#  targetCPUUtilizationPercentage: 50
+---
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
+metadata:
+ name: pixelchat-message-api
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: pixelchat-message-api
+  minReplicas: 2
+  maxReplicas: 7
+  targetCPUUtilizationPercentage: 50
+---
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
+metadata:
+ name: pixelchat-user-service
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: pixelchat-user-service
+  minReplicas: 1
+  maxReplicas: 5
+  targetCPUUtilizationPercentage: 60
