--- a/kubernetes/cassandraDB.yaml
+++ b/kubernetes/cassandraDB.yaml
@@ -59,9 +59,12 @@ spec:
         - containerPort: 9042
           name: cql
         resources:
-          limits:
+          requests:
             cpu: 500m
             memory: 1Gi
+          limits:
+            cpu: 1000m
+            memory: 2Gi
         securityContext:
           capabilities:
             add:
